Fix: overlay z-index layering issue on Android TagsPage

--- a/src/css/pages/TagsPage.css
+++ b/src/css/pages/TagsPage.css
@@ -4,6 +4,12 @@
   z-index: -1;
 }
 
+.tags-list {
+  display: flex;
+  flex-direction: column;
+  margin-top: .5rem;
+}
+
 .tags-header {
   display: flex;
   justify-content: space-between;
@@ -36,6 +42,7 @@
 }
 .tags-add-container input {
   position: relative;
+  z-index: 1;
   width: 100%;
   margin-bottom: 1rem;
   padding: .4rem .8rem .4rem 2rem;
@@ -49,6 +56,8 @@
   border: 1px solid var(--color-accent);
 }
 .tags-add-container span {
+  position: relative;
+  z-index: 1;
   margin-bottom: 1rem;
   padding: 0 1rem;
   text-wrap: nowrap;
